<resources>
    <string name="app_name">My Application</string>
    <string name="btnLogin">Log in</string>
    <string name="inLoginHint">name</string>
    <string name="inPassHint">pass</string>
    <string name="passErr">login / password incorrect</string>
    <string name="emptyLogin">empty login</string>
    <string name="emptyPass">empty password</string>
    <string name="emptyLoginAndPass">empty login and pass</string>

    <string name="menu1">live</string>
    <string name="menu2">group</string>

    <string-array name="themesSelector">
        <item id="standart" name="standart">standart</item>
        <item id="redTheme" name="redTheme">redTheme</item>
    </string-array>

    <string name="newItemTitle">Title</string>
    <string name="newItemText">Body</string>
    <string name="newItemBtn">Add</string>
</resources>
