<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatSpinner android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/themeSelctor"
                                                android:entries="@array/themesSelector"
    >


    </androidx.appcompat.widget.AppCompatSpinner>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
    >

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/inPassHint"
                    android:id="@+id/passInput"
                    android:ems="10"
                    android:inputType="textPassword"

                    />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorAccent">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/loginInput"
                    app:layout_constraintBottom_toTopOf="@id/pass"
                    android:hint="@string/inLoginHint"
                    />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/pass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_gravity="center_horizontal"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>